--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,23 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+sensio_framework_extra:
+    view: { annotations: false }
+    request: { converters: true }
+
+# FOS Restbundle Configuration
+fos_rest:
+    body_converter:
+        enabled: true
+        validate: true
+        validation_errors_argument: violations
+    view:
+        formats: { json: true, xml: false, rss: false }
+        view_response_listener: true
+    serializer:
+        serialize_null: true
+    format_listener:
+        rules:
+            - { path: '^/', priorities: ['json'], fallback_format: 'json'}
+    param_fetcher_listener: force
