Config de base pour le bundle UserBundle qui va permettre l'authentification de l'utilisateur

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,9 @@
-auth:
-    resource: "@AuthBundle/Controller/"
+user:
+    resource: "@UserBundle/Controller/"
     type:     annotation
-    prefix:   /
+    prefix:   /users
+    defaults:
+        _format: json
 
 app:
     resource: '@AppBundle/Controller/'
