Avancement sur le login de l'utilisateur -> les tests ne passent pas

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -80,3 +80,9 @@ fos_user:
     from_email:
         address: "amacabr2@gmail.com"
         sender_name: "amacabr2"
+
+lexik_jwt_authentication:
+    private_key_path: '%kernel.root_dir%/../var/jwt/private.pem'
+    public_key_path:  '%kernel.root_dir%/../var/jwt/public.pem'
+    pass_phrase:      '%jwt_key_pass_phrase%'
+    token_ttl: 3600
