--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -86,3 +86,10 @@ lexik_jwt_authentication:
     public_key_path:  '%kernel.root_dir%/../var/jwt/public.pem'
     pass_phrase:      '%jwt_key_pass_phrase%'
     token_ttl: 3600
+    encoder:
+        # token encoder/decoder service - default implementation based on the namshi/jose library
+        service: lexik_jwt_authentication.encoder.default
+        # crypto engine used by the encoder service
+        crypto_engine: openssl
+        # encryption algorithm used by the encoder service
+        signature_algorithm: RS256
