--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,3 +21,6 @@ security:
             stateless: true
             logout: true
             anonymous: true
+            guard:
+                authenticators:
+                    - 'token_authenticator'
