--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -94,3 +94,14 @@ lexik_jwt_authentication:
         crypto_engine: openssl
         # encryption algorithm used by the encoder service
         signature_algorithm: RS256
+
+sensio_framework_extra:
+    view: { annotations: false }
+
+fos_rest:
+    body_converter:
+        enabled: true
+    view:
+        formats: { json: true, xml: false, rss: false }
+    serializer:
+        serialize_null: true
