--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -103,7 +103,7 @@ fos_rest:
         enabled: true
     view:
         formats: { json: true, xml: false, rss: false }
-        view_reponse_listener: true
+        view_response_listener: true
     serializer:
         serialize_null: true
     format_listener:
