--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,6 +21,12 @@ security:
             stateless: true
             logout: true
             anonymous: true
+            form_login:
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
+            logout:
+                path:       fos_user_security_logout
+                target:     fos_user_security_login
             guard:
                 authenticators:
                     - 'token_authenticator'
