--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -42,3 +42,7 @@ services:
         class: UserBundle\Email\ForgotPasswordEmail
         arguments: ["@mailer", "@templating"]
         public: true
+
+    token_change_password:
+        class: UserBundle\Utils\RandomTokenGenerator
+        public: true
