--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -115,3 +115,15 @@ fos_rest:
         rules:
             - { path: '^/', priorities: ['json', 'html'], fallback_format: 'json'}
     param_fetcher_listener: force
+
+
+vich_uploader:
+    db_driver: orm
+    mappings:
+        product_image:
+            uri_prefix:         /images/
+            upload_destination: '%kernel.root_dir%/../web/images/%'
+            inject_on_load:     false
+            delete_on_update:   false
+            delete_on_remove: true
+namer: vich_uploader.namer_uniqid
