--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -13,6 +13,7 @@ parameters:
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: ~
+    mailer_port: 1025
     mailer_password: ~
 
     # A secret key that's used to generate certain security-related tokens
