Début de la création des fixtures

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -127,3 +127,6 @@ vich_uploader:
             delete_on_update:   false
             delete_on_remove: true
             namer: vich_uploader.namer_uniqid
+
+david_badura_faker:
+  locale: fr_FR
