Enregistrement des utilisateurs avec plus d'information, la date de naissance est devenu une simple chaine de caractères, ajout du code postal pour la localisation

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,6 +83,9 @@ fos_user:
     from_email:
         address: "amacabr2@gmail.com"
         sender_name: "amacabr2"
+    registration:
+        form:
+            type: UserBundle\Form\RegistrationType
     resetting:
         email:
             template: '@User/email/password_resetting.email.twig'
